--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ziray Hao\n",
+    "f003mfv@dartmouth.edu\n",
+    "Dartmouth College\n",
+    "June 7, 2022\n",
+    "\n",
+    "TxtCmp: using semantic context to compress text by vowel omissions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
